JumpScript/tests/baselines/reference/jsxViaImport.errors.txt
tests/cases/compiler/consumer.jmpx(5,17): error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.


==== tests/cases/compiler/consumer.jmpx (1 errors) ====
    /// <reference path="component.d.jump" />
    import BaseComponent = require('BaseComponent');
    class TestComponent extends React.Component<any, {}> {
        render() {
            return <BaseComponent />;
                    ~~~~~~~~~~~~~
!!! error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.
        }
    }
    
==== tests/cases/compiler/component.d.jump (0 errors) ====
    declare module JSX {
      interface ElementAttributesProperty { props; }
    }
    declare module React {
      class Component<T, U> { }
    }
    declare module "BaseComponent" {
        var base: React.Component<any, {}>;
        export = base;
    }
    